# DeepSeek-Reasonix

./: .gitignore  .napi-typedef.txt  Cargo.toml  package-lock.json  package.json
crates/reasonix-render/: Cargo.toml  build.rs  index.js  package.json
crates/reasonix-render/npm/darwin-arm64/: README.md  package.json
crates/reasonix-render/npm/darwin-x64/: README.md  package.json
crates/reasonix-render/npm/linux-arm64-gnu/: README.md  package.json
crates/reasonix-render/npm/linux-x64-gnu/: README.md  package.json
crates/reasonix-render/npm/win32-x64-msvc/: README.md  package.json
crates/reasonix-render/src/: lib.rs  main.rs  napi_bridge.rs
crates/reasonix-render/src/whole_screen/: dock.rs  mod.rs  sidebar.rs
crates/reasonix-render/src/whole_screen/cards/: mod.rs
desktop/src/: App.tsx  Markdown.tsx  styles.css
desktop/src/i18n/: en.ts  zh-CN.ts
desktop/src/ui/: cards.tsx  composer.tsx  thread.tsx
src/: config.ts
src/cli/: index.ts
src/cli/commands/: index.ts
src/cli/ui/: PromptInput.tsx  multiline-keys.ts  stdin-reader.ts
src/code/: setup.ts
src/i18n/: EN.ts  zh-CN.ts
src/index/symbol/: builder.ts  context.ts  edges.ts  graph.ts  resolver.ts  store.ts  tool.ts  types.ts  watcher.ts
tests/: stdin-reader.test.ts
