[workspace]
members = ["crates/reasonix-render"]
exclude = ["desktop"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[profile.release]
# LTO across the whole crate for the smallest .node payload — napi-rs
# subpackages ship per platform, so binary size shows up directly in
# user install time.
lto = true
